--- a/register.html
+++ b/register.html
@@ -110,6 +110,7 @@
     <script type="module">
       import { api } from "./js/api.js";
       import { redirectIfAuthed } from "./js/auth.js";
+      import { handleLoginSuccess } from "./js/ui.js";
 
       redirectIfAuthed();
 
@@ -163,10 +164,35 @@
           return;
         }
 
+        if (login.data && login.data.user) {
+          const u = login.data.user;
+          if (u.mac_address) {
+            localStorage.setItem('klyx_device_mac', u.mac_address);
+          }
+          if (u.device_key) {
+            localStorage.setItem('klyx_device_key', u.device_key);
+          }
+          if (u.subscription) {
+            const sub = u.subscription;
+            if (sub.device_key) {
+              localStorage.setItem('klyx_device_key', sub.device_key);
+            }
+            if (sub.linked_mac) {
+              localStorage.setItem('klyx_device_mac', sub.linked_mac);
+            }
+          }
+        }
+
+        if (login.data && login.data.sync_device) {
+          localStorage.setItem('klyx_device_mac', login.data.sync_device.mac);
+          localStorage.setItem('klyx_device_key', login.data.sync_device.key);
+        }
+
+        await handleLoginSuccess(login.data);
+
         api.session.write({ user: login.data.user, tokens: login.data.tokens });
         window.location.href = "./profile-selection.html";
       });
     </script>
   </body>
 </html>
-
