Remover TV ao Vivo e canais do menu e dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,7 @@
         <div class="container">
           <h1>Navegar</h1>
           <div class="subtext" style="margin-top: 8px">
-            Seu centro de filmes, séries e TV ao vivo.
+            Seu centro de filmes e séries.
           </div>
           <div id="dashboardContent"></div>
         </div>
