Fix: Add klyx-logo.png and update player logo source

--- a/player.html
+++ b/player.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Loading Overlay -->
     <div id="loading-overlay" style="position: fixed; inset: 0; z-index: 20000; background: #000; display: flex; align-items: center; justify-content: center; flex-direction: column; gap: 20px;">
-        <img src="./assets/logos/logo.png" alt="Logo" style="width: 150px; margin-bottom: 10px; animation: float 3s ease-in-out infinite;">
+        <img src="./assets/logos/klyx-logo.png" alt="Logo" style="width: 150px; margin-bottom: 10px; animation: float 3s ease-in-out infinite;">
         
         <style>
             @keyframes float {
