Fix: Mobile player controls, Movie deduplication, Continue Watching, Navbar slim style

--- a/player.html
+++ b/player.html
@@ -50,7 +50,7 @@
     </div>
 
     <!-- Content Info & Controls Row -->
-          <div class="controls-top" style="justify-content: space-between; align-items: center; gap: 15px;">
+          <div id="floating-controls" class="controls-top" style="justify-content: space-between; align-items: center; gap: 15px;">
               <!-- Left Side: Back Button & Title -->
               <div style="display: flex; align-items: center; gap: 15px; flex: 1; min-width: 0;">
                   <!-- Back/Close Button (Transparent with X) -->
