--- a/player.html
+++ b/player.html
@@ -138,10 +138,10 @@
 
               <!-- Clean Error Overlay -->
               <div id="errorOverlay" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: #000; z-index: 20; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 20px;">
-                  <div class="loading-spinner" style="border: 3px solid rgba(255,255,255,0.1); border-left-color: #e50914; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; margin-bottom: 20px; display: none;" id="errorSpinner"></div>
+                  <div class="loading-spinner" style="border: 3px solid rgba(255,255,255,0.1); border-left-color: #9333ea; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; margin-bottom: 20px; display: none;" id="errorSpinner"></div>
                   <h3 style="color: #fff; margin-bottom: 10px; font-weight: 500;">Erro de Reprodução</h3>
                   <p id="errorMsg" style="color: #aaa; font-size: 14px; max-width: 80%; line-height: 1.5;">Não foi possível carregar o vídeo.</p>
-                  <button id="btnRetry" style="margin-top: 20px; padding: 10px 24px; background: #e50914; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; transition: background 0.2s;">Tentar Novamente</button>
+                  <button id="btnRetry" style="margin-top: 20px; padding: 10px 24px; background: #9333ea; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; transition: background 0.2s;">Tentar Novamente</button>
               </div>
           </div>
 
@@ -165,7 +165,7 @@
                   </div>
       
                   <div style="display: flex; justify-content: flex-end;">
-                      <button id="closeTrackModal" style="background: #e50914; color: white; border: none; padding: 10px 24px; border-radius: 6px; font-weight: bold; cursor: pointer;">Fechar</button>
+                      <button id="closeTrackModal" style="background: #9333ea; color: white; border: none; padding: 10px 24px; border-radius: 6px; font-weight: bold; cursor: pointer;">Fechar</button>
                   </div>
               </div>
           </div>
@@ -188,10 +188,10 @@
               <h4 style="margin: 0 0 10px 0; color: #aaa; font-size: 12px; text-transform: uppercase;">A seguir</h4>
               <div id="nextEpTitle" style="color: white; font-weight: bold; margin-bottom: 15px; font-size: 16px;">Episode Title</div>
               <div style="height: 3px; background: #333; margin-bottom: 15px; border-radius: 2px; overflow: hidden;">
-                  <div id="nextEpProgress" style="width: 100%; height: 100%; background: #e50914; transition: width 1s linear;"></div>
+                  <div id="nextEpProgress" style="width: 100%; height: 100%; background: #9333ea; transition: width 1s linear;"></div>
               </div>
               <div style="display: flex; gap: 10px;">
-                  <button id="btnPlayNextNow" style="flex: 1; background: #e50914; color: white; border: none; padding: 8px; border-radius: 4px; cursor: pointer; font-weight: bold;">Assistir Agora</button>
+                  <button id="btnPlayNextNow" style="flex: 1; background: #9333ea; color: white; border: none; padding: 8px; border-radius: 4px; cursor: pointer; font-weight: bold;">Assistir Agora</button>
                   <button id="btnCancelNext" style="flex: 1; background: #333; color: white; border: 1px solid #555; padding: 8px; border-radius: 4px; cursor: pointer;">Cancelar</button>
               </div>
           </div>
