Refactor: Move login screen to index.html and update redirects

--- a/register.html
+++ b/register.html
@@ -95,7 +95,7 @@
             
             <div style="margin-top: 15px; text-align: center;">
                 <span style="color: #737373;">Já tem uma conta? </span>
-                <a href="./login.html" style="color: white; text-decoration: none;">Entrar.</a>
+                <a href="./index.html" style="color: white; text-decoration: none;">Entrar.</a>
             </div>
           </div>
         </form>
