UI: Add Logout button to profile selection screen

--- a/profile-selection.html
+++ b/profile-selection.html
@@ -216,7 +216,11 @@
       <div id="profilesGrid" class="profiles-grid">
         <!-- Profiles injected here -->
       </div>
-      <!-- <button id="manageProfilesBtn" class="manage-btn">Gerenciar Perfis</button> -->
+      
+      <div class="actions-container" style="margin-top: 2rem; display: flex; gap: 1rem;">
+        <button id="logoutBtn" class="manage-btn">Sair da Conta</button>
+        <!-- <button id="manageProfilesBtn" class="manage-btn">Gerenciar Perfis</button> -->
+      </div>
         </div>
       </div>
     </div>
