--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
 
     <script type="module">
-      import { api } from "./js/api.js";
+      import { api } from "./js/api.js?v=20240130";
       import { redirectIfAuthed, applyTheme } from "./js/auth.js";
       import { handleLoginSuccess } from "./js/ui.js";
 
