--- a/profile-selection.html
+++ b/profile-selection.html
@@ -430,16 +430,37 @@
               <input type="text" id="profileName" placeholder="Nome do perfil" maxlength="20" />
             </div>
             
-            <div class="form-group">
-              <label for="profileAge">Classificação Etária</label>
-              <select id="profileAge">
-                <option value="18">18+ (Sem restrições)</option>
-                <option value="16">16+ (Não recomendado para menores de 16)</option>
-                <option value="14">14+ (Não recomendado para menores de 14)</option>
-                <option value="12">12+ (Não recomendado para menores de 12)</option>
-                <option value="10">10+ (Crianças mais velhas)</option>
-                <option value="5">Livre (Crianças)</option>
-              </select>
+            <!-- Age Selection -->
+            <div>
+                <label class="block text-sm font-medium text-gray-300 mb-1">Idade</label>
+                <select id="profileAge" class="w-full bg-gray-700 text-white rounded p-2 focus:outline-none focus:ring-2 focus:ring-purple-600">
+                    <option value="18">18+ (Sem restrições)</option>
+                    <option value="16">16+ (Não recomendado para menores de 16)</option>
+                    <option value="14">14+ (Não recomendado para menores de 14)</option>
+                    <option value="12">12+ (Não recomendado para menores de 12)</option>
+                    <option value="10">10+ (Crianças mais velhas)</option>
+                    <option value="0">Livre (Crianças)</option>
+                </select>
+            </div>
+
+            <!-- Adult Content Toggle (Hidden by default, shown only for 18+) -->
+            <div id="adultContentSection" class="hidden border border-red-900/50 bg-red-900/10 p-3 rounded-lg">
+                <div class="flex items-center justify-between">
+                    <div>
+                        <label class="block text-sm font-medium text-red-400">Ativar conteúdo adulto (XXX)?</label>
+                        <p class="text-xs text-gray-400">Exige senha PIN para acessar o perfil.</p>
+                    </div>
+                    <label class="relative inline-flex items-center cursor-pointer">
+                        <input type="checkbox" id="profileAllowExplicit" class="sr-only peer">
+                        <div class="w-11 h-6 bg-gray-700 peer-focus:outline-none peer-focus:ring-2 peer-focus:ring-red-600 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-red-600"></div>
+                    </label>
+                </div>
+
+                <!-- PIN Input (Shown only when Adult Content is checked) -->
+                <div id="pinSection" class="mt-3 hidden">
+                    <label class="block text-sm font-medium text-gray-300 mb-1">Crie um PIN de 4 dígitos</label>
+                    <input type="tel" id="profilePin" maxlength="4" placeholder="0000" class="w-full bg-gray-700 text-white rounded p-2 focus:outline-none focus:ring-2 focus:ring-red-600 text-center tracking-widest text-lg">
+                </div>
             </div>
           </div>
         </div>
