--- a/dashboard.html
+++ b/dashboard.html
@@ -9,8 +9,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="manifest" href="./manifest.json" />
     <title>KLYX — Dashboard</title>
-    <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="./css/netflix-ui.css" />
+    <link rel="stylesheet" href="./css/global.css?v=4" />
+    <link rel="stylesheet" href="./css/netflix-ui.css?v=4" />
   </head>
   <body>
     <div class="app-shell">
@@ -27,7 +27,7 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js";
+      import { mountAppShell } from "./js/router.js?v=4";
       import { initDashboard } from "./js/ui.js";
       
       try {
