--- a/settings.html
+++ b/settings.html
@@ -9,8 +9,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="manifest" href="./manifest.json" />
     <title>KLYX — Settings</title>
-    <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="./css/netflix-ui.css" />
+    <link rel="stylesheet" href="./css/global.css?v=4" />
+    <link rel="stylesheet" href="./css/netflix-ui.css?v=4" />
   </head>
   <body>
     <div class="app-shell">
@@ -90,7 +90,7 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js";
+      import { mountAppShell } from "./js/router.js?v=4";
       import { initSettings } from "./js/ui.js";
       await mountAppShell({ currentPath: "/settings" });
       await initSettings();
