--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         margin-top: 10px;
       }
     </style>
-    <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="./css/global.css?v=6" />
+    <link rel="stylesheet" href="./css/login.css?v=6" />
   </head>
   <body>
     <div class="auth-shell">
