--- a/movies.html
+++ b/movies.html
@@ -42,10 +42,10 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=4";
-      import { initMovies } from "./js/ui.js";
+      import { mountAppShell } from "./js/router.js?v=6";
+      import { initMovies } from "./js/movies.js";
       await mountAppShell({ currentPath: "/movies" });
-      await initMovies();
+      initMovies();
     </script>
   </body>
 </html>
