Remove age ratings, simplify parental control, fix safe content filter

--- a/dashboard.html
+++ b/dashboard.html
@@ -27,8 +27,8 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=8";
-      import { initDashboard } from "./js/ui.js";
+      import { mountAppShell } from "./js/router.js?v=9";
+      import { initDashboard } from "./js/ui.js?v=9";
       
       try {
         await mountAppShell({ currentPath: "/dashboard" });
