--- a/settings.html
+++ b/settings.html
@@ -49,6 +49,17 @@
                 <span id="settingsStatus" class="subtext"></span>
               </div>
             </div>
+
+            <div class="panel">
+              <div style="font-weight: 750">Controle Parental</div>
+              <div class="field" style="margin-top: 12px">
+                <label class="subtext" style="color: #fff;">Conteúdo Adulto (+18)</label>
+                <div style="margin-top: 6px; display: flex; align-items: center; justify-content: space-between;">
+                    <span class="subtext" style="font-size: 0.85em; opacity: 0.7;">Permitir conteúdo explícito e violento (Requer PIN)</span>
+                    <input id="adultContentToggle" type="checkbox" style="transform: scale(1.5); cursor: pointer;" />
+                </div>
+              </div>
+            </div>
             
             <div class="panel">
               <div style="font-weight: 750; color: #e50914;">Assinatura do Dispositivo</div>
