--- a/profile-selection.html
+++ b/profile-selection.html
@@ -476,9 +476,7 @@
   <body>
     <div class="profile-container">
       <div class="profile-gate">
-        <div class="logo-container" style="text-align: center; margin-bottom: 1rem; display: flex; align-items: center; justify-content: center;">
-          <img src="./assets/logos/logo.png" onerror="this.src='./assets/logos/logo.svg'" alt="KLYX" style="height: 50px;">
-        </div>
+        <img src="./assets/logos/klyx-logo.png" alt="KLYX" style="height: 60px; margin-bottom: 2rem;" />
         <h1>Quem está assistindo?</h1>
         
         <div id="profilesGrid" class="profiles-grid">
