--- a/setup_firebase.html
+++ b/setup_firebase.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>
-        <img src="./assets/logos/logo.svg" alt="KLYX" style="height: 40px; vertical-align: middle;">
+        <img src="./assets/logos/klyx-logo.png" alt="KLYX" style="height: 40px; vertical-align: middle;">
         <span class="connection-dot" id="connectionStatusDot" title="Checking connection..."></span>
         Configuração Inicial do Banco de Dados
     </h1>
