Fix movies.js path, remove logo.svg ref, bump versions

--- a/dashboard.html
+++ b/dashboard.html
@@ -27,8 +27,8 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=9";
-      import { initDashboard } from "./js/ui.js?v=9";
+      import { mountAppShell } from "./js/router.js?v=20260131";
+      import { initDashboard } from "./js/ui.js?v=20260131";
       
       try {
         await mountAppShell({ currentPath: "/dashboard" });
