--- a/profile-selection.html
+++ b/profile-selection.html
@@ -555,6 +555,6 @@
       </div>
     </div>
 
-    <script type="module" src="./js/profile-selection.js?v=9"></script>
+    <script type="module" src="./js/profile-selection.js?v=20260131"></script>
   </body>
 </html>
