--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     </div>
 
     <script type="module">
-      import { api } from "./js/api.js?v=20240130c";
-      import { redirectIfAuthed, applyTheme } from "./js/auth.js";
-      import { handleLoginSuccess } from "./js/ui.js";
+      import { api } from "./js/api.js?v=20260131";
+      import { redirectIfAuthed, applyTheme } from "./js/auth.js?v=20260131";
+      import { handleLoginSuccess } from "./js/ui.js?v=20260131";
 
       // Dev helper: ?logout=true clears session to allow seeing the login screen
       if (new URLSearchParams(window.location.search).has('logout')) {
