--- a/movies.html
+++ b/movies.html
@@ -42,8 +42,8 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=6";
-      import { initMovies } from "./js/movies.js";
+      import { mountAppShell } from "./js/router.js?v=20260131";
+      import { initMovies } from "./js/ui.js?v=20260131";
       await mountAppShell({ currentPath: "/movies" });
       initMovies();
     </script>
