--- a/series.html
+++ b/series.html
@@ -48,8 +48,8 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=6";
-      import { initSeries } from "./js/ui.js";
+      import { mountAppShell } from "./js/router.js?v=20260131";
+      import { initSeries } from "./js/ui.js?v=20260131";
       await mountAppShell({ currentPath: "/series" });
       await initSeries();
     </script>
