--- a/settings.html
+++ b/settings.html
@@ -106,7 +106,7 @@
 
     <script type="module">
       import { mountAppShell } from "./js/router.js?v=6";
-      import { initSettings } from "./js/ui.js";
+      import { initSettings } from "./js/ui.js?v=20260131-reset";
       await mountAppShell({ currentPath: "/settings" });
       await initSettings();
     </script>
