fix: force immediate sync on profile creation to prevent data loss on tab close

--- a/profile-selection.html
+++ b/profile-selection.html
@@ -553,6 +553,6 @@
       </div>
     </div>
 
-    <script type="module" src="./js/profile-selection.js?v=20260131"></script>
+    <script type="module" src="./js/profile-selection.js?v=20260131-profilesync"></script>
   </body>
 </html>
