fix: force syncDown on profile selection load to ensure cross-device consistency

--- a/profile-selection.html
+++ b/profile-selection.html
@@ -553,6 +553,6 @@
       </div>
     </div>
 
-    <script type="module" src="./js/profile-selection.js?v=20260131-profilesync"></script>
+    <script type="module" src="./js/profile-selection.js?v=20260131-profilesync2"></script>
   </body>
 </html>
