--- a/profile-selection.html
+++ b/profile-selection.html
@@ -553,6 +553,6 @@
       </div>
     </div>
 
-    <script type="module" src="./js/profile-selection.js?v=20260131-nocache"></script>
+    <script type="module" src="./js/profile-selection.js?v=20260131-repodb"></script>
   </body>
 </html>
