fix: Player Black Screen - Added hls.js and optimized Proxies

--- a/player.html
+++ b/player.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/netflix-ui.css" />
     <link rel="stylesheet" href="./css/player-mobile.css" />
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
   </head>
   <body>
     <!-- Loading Overlay -->
