fix(auth): update cache busting version to fixauth4 and improve proxy parsing

--- a/profile.html
+++ b/profile.html
@@ -51,8 +51,8 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=6";
-      import { initProfile } from "./js/ui.js";
+      import { mountAppShell } from "./js/router.js?v=20260131-fixauth4";
+      import { initProfile } from "./js/ui.js?v=20260131-fixauth4";
       await mountAppShell({ currentPath: "/profile" });
       await initProfile();
     </script>
