--- a/search.html
+++ b/search.html
@@ -39,8 +39,8 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=6";
-      import { initSearch } from "./js/search.js";
+      import { mountAppShell } from "./js/router.js?v=20260131-fixauth4";
+      import { initSearch } from "./js/search.js?v=20260131-fixauth4";
       await mountAppShell({ currentPath: "/search" });
       initSearch();
     </script>
