--- a/series.html
+++ b/series.html
@@ -48,10 +48,10 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=20260131";
-      import { initSeries } from "./js/ui.js?v=20260131";
+      import { mountAppShell } from "./js/router.js?v=20260131-fixauth4";
+      import { initSeries } from "./js/ui.js?v=20260131-fixauth4";
       await mountAppShell({ currentPath: "/series" });
-      await initSeries();
+      initSeries();
     </script>
   </body>
 </html>
