--- a/player.html
+++ b/player.html
@@ -17,7 +17,13 @@
   <body>
     <!-- Loading Overlay -->
     <div id="loading-overlay" style="position: fixed; inset: 0; z-index: 20000; background: #000; display: flex; align-items: center; justify-content: center; flex-direction: column; gap: 20px;">
-        <img src="./assets/logos/klyx-logo.png" alt="Logo" style="width: 150px; margin-bottom: 10px; animation: float 3s ease-in-out infinite;">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 220 80" style="width: 150px; margin-bottom: 10px; animation: float 3s ease-in-out infinite;">
+            <path d="M20 15 L 20 65 L 60 40 Z" fill="none" stroke="#A855F7" stroke-width="10" stroke-linejoin="round" stroke-linecap="round"/>
+            <text x="75" y="52" font-family="system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif" font-weight="800" font-size="42" fill="#fff">Klyx</text>
+            <rect x="155" y="15" width="6" height="6" rx="1" fill="#A855F7" />
+            <rect x="163" y="8" width="6" height="6" rx="1" fill="#A855F7" />
+            <rect x="148" y="22" width="4" height="4" rx="1" fill="#A855F7" opacity="0.8" />
+        </svg>
         
         <style>
             @keyframes float {
