--- a/movies.html
+++ b/movies.html
@@ -42,10 +42,15 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=20260131-fixauth4";
-      import { initMovies } from "./js/ui.js?v=20260131-fixauth4";
-      await mountAppShell({ currentPath: "/movies" });
-      initMovies();
+      import { mountAppShell } from "./js/router.js?v=20260131-fixauth5";
+      import { initMovies } from "./js/ui.js?v=20260131-fixauth5";
+      
+      try {
+        await mountAppShell({ currentPath: "/movies" });
+        await initMovies();
+      } catch (e) {
+        console.error("Movies Init Error:", e);
+      }
     </script>
   </body>
 </html>
