Fix: Profile icons fallback, manage button safety, and logo update (20260201-logo1)

--- a/profile-selection.html
+++ b/profile-selection.html
@@ -476,7 +476,7 @@
   <body>
     <div class="profile-container">
       <div class="profile-gate">
-        <img src="./assets/logos/klyx-logo.png" alt="KLYX" style="height: 60px; margin-bottom: 2rem;" />
+        <img src="./assets/logos/logo.svg" alt="KLYX" style="height: 120px; margin-bottom: 2rem;" />
         <h1>Quem está assistindo?</h1>
         
         <div id="profilesGrid" class="profiles-grid">
@@ -554,8 +554,8 @@
     </div>
 
     <script type="module">
-      import { api } from "./js/api.js?v=20260131-fixauth8";
-      import { init } from "./js/profile-selection.js?v=20260131-fixauth8";
+      import { api } from "./js/api.js?v=20260201-logo1";
+      import { init } from "./js/profile-selection.js?v=20260201-logo1";
       init();
     </script>
   </body>
