Fix: Revert logo in HTML to klyx-logo.png

--- a/profile-selection.html
+++ b/profile-selection.html
@@ -476,7 +476,7 @@
   <body>
     <div class="profile-container">
       <div class="profile-gate">
-        <img src="./assets/logos/logo.svg" alt="KLYX" style="height: 120px; margin-bottom: 2rem;" />
+        <img src="./assets/logos/klyx-logo.png" alt="KLYX" style="height: 150px; margin-bottom: 2rem;" />
         <h1>Quem está assistindo?</h1>
         
         <div id="profilesGrid" class="profiles-grid">
