Fix: Force hide logo via CSS and add Legacy Profile Recovery

--- a/profile-selection.html
+++ b/profile-selection.html
@@ -476,7 +476,6 @@
   <body>
     <div class="profile-container">
       <div class="profile-gate">
-        <img src="./assets/logos/klyx-logo.png" alt="KLYX" style="height: 150px; margin-bottom: 2rem;" />
         <h1>Quem está assistindo?</h1>
         
         <div id="profilesGrid" class="profiles-grid">
@@ -554,8 +553,8 @@
     </div>
 
     <script type="module">
-      import { api } from "./js/api.js?v=20260201-logo1";
-      import { init } from "./js/profile-selection.js?v=20260201-logo1";
+      import { api } from "./js/api.js?v=20260201-restore1";
+      import { init } from "./js/profile-selection.js?v=20260201-restore1";
       init();
     </script>
   </body>
