Fix: Light theme, cloud sync for preferences, and script versioning

--- a/movies.html
+++ b/movies.html
@@ -42,8 +42,8 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=20260131-fixauth8";
-      import { initMovies } from "./js/ui.js?v=20260131-fixauth8";
+      import { mountAppShell } from "./js/router.js?v=20260204-theme";
+      import { initMovies } from "./js/ui.js?v=20260204-theme";
       
       try {
         await mountAppShell({ currentPath: "/movies" });
