--- a/dashboard.html
+++ b/dashboard.html
@@ -27,8 +27,8 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=20260131-fixauth8";
-      import { initDashboard } from "./js/ui.js?v=20260131-fixauth8";
+      import { mountAppShell } from "./js/router.js?v=20260204-theme";
+      import { initDashboard } from "./js/ui.js?v=20260204-theme";
       
       try {
         await mountAppShell({ currentPath: "/dashboard" });
