--- a/profile-selection.html
+++ b/profile-selection.html
@@ -563,8 +563,8 @@
     </div>
 
     <script type="module">
-      import { api } from "./js/api.js?v=20260201-db2";
-      import { init } from "./js/profile-selection.js?v=20260201-db2";
+      import { api } from "./js/api.js?v=20260204-theme";
+      import { init } from "./js/profile-selection.js?v=20260204-theme";
       init();
     </script>
   </body>
