--- a/series.html
+++ b/series.html
@@ -48,8 +48,8 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=20260131-fixauth8";
-      import { initSeries } from "./js/ui.js?v=20260131-fixauth8";
+      import { mountAppShell } from "./js/router.js?v=20260204-theme";
+      import { initSeries } from "./js/ui.js?v=20260204-theme";
       
       try {
         await mountAppShell({ currentPath: "/series" });
