--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     </div>
 
     <script type="module">
-      import { api } from "./js/api.js?v=20260131-fixauth8";
-      import { redirectIfAuthed, applyTheme } from "./js/auth.js?v=20260131-realtime";
-      import { handleLoginSuccess } from "./js/ui.js?v=20260131-fixauth8";
+      import { api } from "./js/api.js?v=20260204-theme";
+      import { redirectIfAuthed, applyTheme } from "./js/auth.js?v=20260204-theme";
+      import { handleLoginSuccess } from "./js/ui.js?v=20260204-theme";
 
       // Dev helper: ?logout=true clears session to allow seeing the login screen
       if (new URLSearchParams(window.location.search).has('logout')) {
