--- a/search.html
+++ b/search.html
@@ -39,10 +39,15 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=20260131-fixauth6";
-      import { initSearch } from "./js/search.js?v=20260131-fixauth6";
-      await mountAppShell({ currentPath: "/search" });
-      initSearch();
+      import { mountAppShell } from "./js/router.js?v=20260204-theme";
+      import { initSearch } from "./js/search.js?v=20260204-theme";
+      
+      try {
+        await mountAppShell({ currentPath: "/search" });
+        await initSearch();
+      } catch (e) {
+         console.error("Search Init Error:", e);
+      }
     </script>
   </body>
 </html>
