--- a/settings.html
+++ b/settings.html
@@ -69,7 +69,7 @@
                  <div id="subscriptionStatus" class="badge" style="background: #333; font-size: 0.9rem; padding: 6px 12px;">Verificando...</div>
               </div>
               <div class="field" style="margin-top: 32px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 16px;">
-                  <button id="resetData" class="btn" style="background: #e50914; color: white; width: 100%;" type="button">⚠️ Limpar Todos os Dados (Reset)</button>
+                  <button id="resetData" class="btn" style="background: #9333ea; color: white; width: 100%;" type="button">⚠️ Limpar Todos os Dados (Reset)</button>
                   <p class="subtext" style="text-align: center; margin-top: 8px; font-size: 0.8em;">Apaga perfis e progresso deste dispositivo e da nuvem.</p>
               </div>
             </div>
