--- a/dashboard.html
+++ b/dashboard.html
@@ -9,8 +9,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="manifest" href="./manifest.json" />
     <title>KLYX — Dashboard</title>
-    <link rel="stylesheet" href="./css/global.css?v=7" />
-    <link rel="stylesheet" href="./css/netflix-ui.css?v=7" />
+    <link rel="stylesheet" href="./css/global.css?v=20260204-fix1" />
+    <link rel="stylesheet" href="./css/netflix-ui.css?v=20260204-fix1" />
   </head>
   <body>
     <div class="app-shell">
@@ -27,8 +27,8 @@
     </div>
 
     <script type="module">
-      import { mountAppShell } from "./js/router.js?v=20260204-theme";
-      import { initDashboard } from "./js/ui.js?v=20260204-theme";
+      import { mountAppShell } from "./js/router.js?v=20260204-fix1";
+      import { initDashboard } from "./js/ui.js?v=20260204-fix1";
       
       try {
         await mountAppShell({ currentPath: "/dashboard" });
