--- a/profile-selection.html
+++ b/profile-selection.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <link rel="manifest" href="./manifest.json" />
     <title>KLYX — Quem está assistindo?</title>
-    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/global.css?v=20260204-theme" />
     <style>
       .profile-gate img.logo {
           display: block;
@@ -563,8 +563,8 @@
     </div>
 
     <script type="module">
-      import { api } from "./js/api.js?v=20260204-theme";
-      import { init } from "./js/profile-selection.js?v=20260204-theme";
+      import { api } from "./js/api.js?v=20260204-fix1";
+      import { init } from "./js/profile-selection.js?v=20260204-fix1";
       init();
     </script>
   </body>
