Remove account security section and style theme/language selects

--- a/settings.html
+++ b/settings.html
@@ -74,21 +74,7 @@
               </div>
             </div>
 
-            <div class="panel">
-              <div style="font-weight: 750">Segurança da conta</div>
-              <div class="field" style="margin-top: 12px">
-                <label class="subtext">Senha atual</label>
-                <input id="currentPassword" class="input" type="password" style="margin-top: 6px" />
-              </div>
-              <div class="field" style="margin-top: 12px">
-                <label class="subtext">Nova senha</label>
-                <input id="newPassword" class="input" type="password" style="margin-top: 6px" minlength="8" />
-              </div>
-              <div class="toolbar" style="margin-top: 14px">
-                <button id="changePassword" class="btn" type="button">Alterar senha</button>
-                <span id="passwordStatus" class="subtext"></span>
-              </div>
-            </div>
+            <!-- Account Security Removed -->
           </div>
         </div>
       </main>
